--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<img src='images/about.png'width='120px' height="100px" /></a>
-	<a href='portfolio.html'><img src='images/home.png'width='120px' height="100px" /></a>
+	<a href='index.html'><img src='images/home.png'width='120px' height="100px" /></a>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam<br> nonummy nibh euismod tincidunt ut laoreet dolore magna sit amet<br> felis iaculis,venenatis iaculis turpis mollis.<br>
 	Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam<br> nonummy nibh euismod tincidunt ut laoreet dolore magna sit amet<br> felis iaculis, venenatis iaculis turpis mollis.</br></p>
 	
