--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class='menu-bar'>
 <ul>
-<li class='active'><a href='portfolio.html'><img src='images/home.png'width='100px' height="80px" /></a>
+<li class='active'><a href='index.html'><img src='images/home.png'width='100px' height="80px" /></a>
 <li><a href="about.html"><img src='images/about.png' width="100px" height="80px"/></a>
 </li>
 <li><a href='#'><img src='images/works.png'width='100px'height='80px'/></a>
