--- a/index.html
+++ b/index.html
@@ -1,47 +1,91 @@
-<!DOCTYPE html>
-<html>
-<html lang='en'>
-<head>
-<meta charset='UTF-8'/>
-<title>portfolio</title>
-<link rel='stylesheet' href='style.css'>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">
-</head>
-<body>
-	<div class='menu-bar'>
-<ul>
-<li class='active'><a href='index.html'><img src='images/home.png'width='100px' height="80px" /></a>
-<li><a href="about.html"><img src='images/about.png' width="100px" height="80px"/></a>
-</li>
-<li><a href='#'><img src='images/works.png'width='100px'height='80px'/></a>
-	<div class="sub-menu-1">
-		<ul>
-			<li><a href="#"><img src='images/work.png' width="60px" height="60px"/></a>
-		
-		</ul>
-	</div>
-</li>
-<li><a href='#'><img src='images/social.png' width="100px" height="80px"/></a>
-<div class="sub-menu-1">
-	<ul>
-		<li><a href='#'><img src='images/insta.png' width="60px" height="60px"/></a>
-		<li><a href='#'><img src='images/fb.png' width="60px" height="60px"/></a>
-    </ul>
-	</div>
-</li>
-<li><a href='#'><img src='images/contacts.png' width="100px" height="80px"/></a>
-	<div class='sub-menu-1'>
-		<ul>
-			<li><a href='#'><img src='images/email.png'width='60px' height="60px"/></a>
-			<li><a href="#"><img src='images/telefono.png'width='60px' height="60px"/></a>
-		</ul>
-	</div>
-</ul>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+ <title>portfolio!</title>
+<link rel='stylesheet' href='boot.css'>
+  </head>
+  <body>
+  	<nav class="navbar navbar-light" style="background-color: #ffff00;">
+  <div class="container-fluid">
+    <a href="index.html" class="btn btn-primary">HOME </a>
+     <button type="button" class="btn btn-primary">CURRICULUM</button>
+  </div>
+</nav>
+<div class="container my-5 text-center">
+<h1><img src='images/donna2.png' width="80px;">Martina Iannotta</h1>
+<p class="blockquote">●●●UX/UI DESIGN<img src='images/donna.png' width="80px;"></p>
 </div>
-<div class='wrap'>
-	<h1>Martina Iannotta</h1>
-	<p>UX/UI DESIGN</p>
+<div class='container' >
+  <div class="card-group">
+  <div class="card text-white" style="background-color: green ;">
+    <img src="images/aaa.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">ABOUT</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.....</p>
+      <button type="button" class="btn btn-primary">Go About</button>
+    </div>
+  </div>
+  <div class="card text-white" style="background-color: green;">
+    <img src="images/lavori.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">WORKS</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt...</p>
+    <button type="button" class="btn btn-primary">Go Works</button>
+    
+    </div>
+  </div>
+  <div class="card text-white" style="background-color: green;">
+    <img src="images/soci.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">SOCIAL</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ....</p>
+    <button type="button" class="btn btn-primary">Go Social</button>
+    </div>
+  </div>
+<div class="card text-white" style="background-color: green;">
+    <img src="images/cont2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">CONTACTS</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.....</p>
+      <button type="button" class="btn btn-primary">Go Contacts</button>
+    </div>
+  </div>
+
+
 </div>
-</body>
+
+
+  
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+   
+  </body>
 </html>
